fix bugs [favicon]

--- a/assets/templates/to-do.html
+++ b/assets/templates/to-do.html
@@ -9,7 +9,7 @@
 
     <!-- Estilos Personalizados -->
     <link rel="stylesheet" href="../css/to-do.css">
-    <link rel="icon" href="assets/img/SamSantos-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/logo-16x16-favicon-SamSantos.png" type="image/x-icon">
 
     <title> Lista To-Do SamSantos</title>
 </head>
